Fixed the after element not showing on logout in mal.css.

--- a/css/mal.css
+++ b/css/mal.css
@@ -250,7 +250,7 @@ div#list_surround > table:not([class*="header_"]):not(:nth-of-type(1)) td:nth-of
 	content: "Rating: ";
 }
 
-div#list_surround > table:not([class*="header_"]):not(:nth-of-type(1)) td:nth-of-type(3):not(.table_header) a:after {
+div#list_surround > table:not([class*="header_"]):not(:nth-of-type(1)) td:nth-of-type(3):not(.table_header):after {
 	content: "/10";
 }
 
